dfir_rs/tests/compile-fail-stable/surface_lattice_fold_noarg.rs
../compile-fail/surface_lattice_fold_noarg.rs